--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       background-attachment: fixed;
       background-position: center;
       height: 100vh;
+      /* max-height: 100%; */
       color: white;
       display: flex;
       align-items: center;
