--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <style>
+
+    html, body {
+      overflow-x: hidden; /* cegah geser horizontal */
+      width: 100%;
+    }
+    
     body {
       font-family: 'Poppins', sans-serif;
       scroll-behavior: smooth;
