--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <section id="home" class="home d-flex flex-column justify-content-center align-items-center text-center" data-aos="fade-up" data-aos-duration="1200">
   <div>
     <img src="images/logo.png" width="200" class="img-responsive mb-3" alt="Leader">
-    <h1>ESCO INTERNATIONAL GmbH</h1>
+    <h1 class="display-1">ESCO INTERNATIONAL GmbH</h1>
     <p class="lead">Excelent In Quality</p>
   </div>
 </section>
